# wamr-examples

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.c
src/: main.c
